<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>gov.nist.toolkit</groupId>
		<artifactId>tk-deps</artifactId>
		<version>7.7.0-SNAPSHOT</version>
		<relativePath>../tk-deps/pom.xml</relativePath>
	</parent>

    <properties>
        <dcm4che.version>3.3.7</dcm4che.version>
    </properties>

    <artifactId>test-engine</artifactId>

	<dependencies>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>plugin-support</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>plugins</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>soap</artifactId>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>gov.nist.toolkit</groupId>-->
<!--			<artifactId>fhir</artifactId>-->
<!--		</dependency>-->
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>adt</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>security-common</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>validators-registry-metadata</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>docref</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>registry-support</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>common-datatypes</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>validators-registry-message</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>xdstest2-logging</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>testkit-utilities</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>common</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>results</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>actor-transaction</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>http</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>installation</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>registry-msg-formats</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>site-management</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>registry-metadata</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>xds-exceptions</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>utilities</artifactId>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>validators-support</artifactId>
		</dependency>
		<!--<dependency> -->
		<!--<groupId>gov.nist.toolkit</groupId> -->
		<!--<artifactId>actorfactory</artifactId> -->
		<!--</dependency> -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlbeans</groupId>
			<artifactId>xmlbeans</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.axis2</groupId>
			<artifactId>addressing</artifactId>
			<version>1.5.4</version>
			<type>mar</type>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
		</dependency>
		<dependency>
			<groupId>org.dcm4che</groupId>
			<artifactId>dcm4che-core</artifactId>
			<version>${dcm4che.version}</version>
		</dependency>
		<dependency>
			<groupId>org.dcm4che.tool</groupId>
			<artifactId>dcm4che-tool-common</artifactId>
			<version>${dcm4che.version}</version>
		</dependency>
		<dependency>
			<groupId>org.dcm4che</groupId>
			<artifactId>dcm4che-net</artifactId>
			<version>${dcm4che.version}</version>
		</dependency>
		<dependency>
			<groupId>org.dcm4che</groupId>
			<artifactId>dcm4che-imageio</artifactId>
			<version>${dcm4che.version}</version>
		</dependency>
		<dependency>
			<groupId>gov.nist.toolkit</groupId>
			<artifactId>interaction-model</artifactId>
		</dependency>
      <dependency>
         <groupId>commons-configuration</groupId>
         <artifactId>commons-configuration</artifactId>
         <version>1.8</version>
      </dependency>
      <dependency>
         <groupId>org.javatuples</groupId>
         <artifactId>javatuples</artifactId>
         <version>1.2</version>
      </dependency>

		<!--
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-base</artifactId>
		</dependency>

		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-structures-dstu3</artifactId>
		</dependency>

		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
		</dependency>

		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-structures-hl7org-dstu2</artifactId>
		</dependency>
		-->

		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>${groovyVersion}</version>
		</dependency>

		<dependency>
			<groupId>net.ihe.gazelle</groupId>
			<artifactId>sequoia-security-adaptor-jar</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<!-- 2.8.0-01 and later require maven-compiler-plugin 3.1 or higher -->
				<version>3.1</version>
				<configuration>
					<compilerId>groovy-eclipse-compiler</compilerId>
                    <source>1.8</source>
					<target>1.8</target>
					<!-- set verbose to be true if you want lots of uninteresting messages -->
					<!-- <verbose>true</verbose> -->
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-eclipse-compiler</artifactId>
						<version>${groovy-eclipse-compiler.version}</version>
					</dependency>
					<!-- for 2.8.0-01 and later you must have an explicit dependency on groovy-eclipse-batch -->
					<dependency>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-eclipse-batch</artifactId>
						<version>${groovy-eclipse-batch.version}</version>
						<!-- or choose a different compiler version -->
						<!-- <version>1.8.6-01</version> -->
						<!-- <version>1.7.10-06</version> -->
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

    <scm>
        <tag>v3.0.2a</tag>
    </scm>
</project>
